[tool.poetry]
name = "blueskysight"
version = "0.1.0"
description = ""
authors = ["Cédric Bonhomme <cedric.bonhomme@circl.lu>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
BlueSkySight-Stream = "blueskysight.stream:main"

[tool.poetry.dependencies]
python = "^3.10"
pyvulnerabilitylookup = "^2.2.0"
websockets = "^14.1"
cbor2 = "^5.6.5"
zstandard = "^0.23.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|fedivuln.egg-info"

[tool.isort]
profile = "black"
